--- a/Test/App.config
+++ b/Test/App.config
@@ -123,7 +123,10 @@
     <add key="ActiveTransferWT" value="True" />
     <add key="DateTimeStartNewTracking" value="2019-01-01 00:00:00" />
     <add key="aspnet:RoslynCompilerLocation" value="roslyn" />
+
+    <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php" />
     
+
   </appSettings>
   <connectionStrings>
     <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
