--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -98,9 +98,9 @@
       <Project>{d7147560-b66a-41bb-bddd-4d24403d5e97}</Project>
       <Name>UZ</Name>
     </ProjectReference>
-    <ProjectReference Include="..\UZ_Client\UZ_Client.csproj">
-      <Project>{f5dac563-41eb-45c4-9e40-24e9e2cfd28d}</Project>
-      <Name>UZ_Client</Name>
+    <ProjectReference Include="..\UZ_SMS\UZ_SMS.csproj">
+      <Project>{3e1f3160-047b-435a-b0c9-bd3000f1581a}</Project>
+      <Name>UZ_SMS</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
