--- a/UZ_SMS/UZ_SMS.csproj
+++ b/UZ_SMS/UZ_SMS.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F5DAC563-41EB-45C4-9E40-24E9E2CFD28D}</ProjectGuid>
+    <ProjectGuid>{3E1F3160-047B-435A-B0C9-BD3000F1581A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UZ_Client</RootNamespace>
-    <AssemblyName>UZ_Client</AssemblyName>
+    <RootNamespace>UZ_SMS</RootNamespace>
+    <AssemblyName>UZ_SMS</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,9 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="uz-rwc-doc.cs" />
+    <Compile Include="UZ_SMS.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IDSLogs\IDSLogs.csproj">
+      <Project>{910d6360-9e8c-4143-a4dd-84e778edb7a6}</Project>
+      <Name>IDSLogs</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
