--- a/Test/App.config
+++ b/Test/App.config
@@ -6,7 +6,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <startup>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <!-- *********** ЛОГИРОВАНИЕ В ФАЙЛ ************************************** -->
@@ -125,7 +125,9 @@
     <add key="aspnet:RoslynCompilerLocation" value="roslyn" />
 
     <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php" />
-    
+
+    <add key="SMS_HOST" value="10.21.2.139" />
+    <add key="SMS_PORT" value="8787" />
 
   </appSettings>
   <connectionStrings>
