sorting ef.. module add arrival ids

--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -60,47 +60,53 @@
     <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="Abstract\IWebView.cs" />
     <Compile Include="Abstract\IWebAccess.cs" />
-    <Compile Include="Concrete\EFParksListWagons.cs" />
-    <Compile Include="Concrete\EFParksWagons.cs" />
-    <Compile Include="Concrete\EFCardsWagonsRepairs.cs" />
-    <Compile Include="Concrete\EFCardsWagons.cs" />
-    <Compile Include="Concrete\EFDirectory_WagonsCondition.cs" />
-    <Compile Include="Concrete\EFDirectory_DEPO.cs" />
-    <Compile Include="Concrete\EFDirectory_SpecialConditions.cs" />
-    <Compile Include="Concrete\EFDirectory_PoligonTravelWagons.cs" />
-    <Compile Include="Concrete\EFDirectory_OperatorsWagons.cs" />
-    <Compile Include="Concrete\EFDirectory_LessorsWagons.cs" />
-    <Compile Include="Concrete\EFDirectory_OwnersWagons.cs" />
-    <Compile Include="Concrete\EFDirectory_TypeOwnerShip.cs" />
-    <Compile Include="Concrete\EFDirectory_TypeWagons.cs" />
-    <Compile Include="Concrete\EFDirectory_ModelsWagons.cs" />
-    <Compile Include="Concrete\EFDirectory_TypesRepairsWagons.cs" />
-    <Compile Include="Concrete\EFDirectory_WagonManufacturers.cs" />
-    <Compile Include="Concrete\EFDirectory_GenusWagons.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_Station.cs" />
+    <Compile Include="Concrete\MORS\EFParksListWagons.cs" />
+    <Compile Include="Concrete\MORS\EFParksWagons.cs" />
+    <Compile Include="Concrete\MORS\EFCardsWagonsRepairs.cs" />
+    <Compile Include="Concrete\MORS\EFCardsWagons.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_WagonsCondition.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_DEPO.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_SpecialConditions.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_PoligonTravelWagons.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_OperatorsWagons.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_LessorsWagons.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_OwnersWagons.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_TypeOwnerShip.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_TypeWagons.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_ModelsWagons.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_TypesRepairsWagons.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_WagonManufacturers.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_GenusWagons.cs" />
     <Compile Include="Concrete\EFRepository.cs" />
-    <Compile Include="Concrete\EFWebView.cs" />
-    <Compile Include="Concrete\EFWebAccess.cs" />
-    <Compile Include="Entities\CardsWagons.cs" />
-    <Compile Include="Entities\CardsWagonsRepairs.cs" />
-    <Compile Include="Entities\Directory_DEPO.cs" />
-    <Compile Include="Entities\Directory_GenusWagons.cs" />
-    <Compile Include="Entities\Directory_LessorsWagons.cs" />
-    <Compile Include="Entities\Directory_ModelsWagons.cs" />
-    <Compile Include="Entities\Directory_OperatorsWagons.cs" />
-    <Compile Include="Entities\Directory_OwnersWagons.cs" />
-    <Compile Include="Entities\Directory_PoligonTravelWagons.cs" />
-    <Compile Include="Entities\Directory_SpecialConditions.cs" />
-    <Compile Include="Entities\Directory_TypeOwnerShip.cs" />
-    <Compile Include="Entities\Directory_TypesRepairsWagons.cs" />
-    <Compile Include="Entities\Directory_TypeWagons.cs" />
-    <Compile Include="Entities\Directory_WagonManufacturers.cs" />
-    <Compile Include="Entities\Directory_WagonsCondition.cs" />
+    <Compile Include="Concrete\RWT\EFArrivalCars.cs" />
+    <Compile Include="Concrete\RWT\EFArrivalSostav.cs" />
+    <Compile Include="Concrete\Shared\EFWebView.cs" />
+    <Compile Include="Concrete\Shared\EFWebAccess.cs" />
+    <Compile Include="Entities\MORS\CardsWagons.cs" />
+    <Compile Include="Entities\MORS\CardsWagonsRepairs.cs" />
+    <Compile Include="Entities\Directory\Directory_DEPO.cs" />
+    <Compile Include="Entities\Directory\Directory_GenusWagons.cs" />
+    <Compile Include="Entities\Directory\Directory_LessorsWagons.cs" />
+    <Compile Include="Entities\Directory\Directory_ModelsWagons.cs" />
+    <Compile Include="Entities\Directory\Directory_OperatorsWagons.cs" />
+    <Compile Include="Entities\Directory\Directory_OwnersWagons.cs" />
+    <Compile Include="Entities\Directory\Directory_PoligonTravelWagons.cs" />
+    <Compile Include="Entities\Directory\Directory_SpecialConditions.cs" />
+    <Compile Include="Entities\Directory\Directory_TypeOwnerShip.cs" />
+    <Compile Include="Entities\Directory\Directory_TypesRepairsWagons.cs" />
+    <Compile Include="Entities\Directory\Directory_TypeWagons.cs" />
+    <Compile Include="Entities\Directory\Directory_WagonManufacturers.cs" />
+    <Compile Include="Entities\Directory\Directory_WagonsCondition.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
-    <Compile Include="Entities\WebAccess.cs" />
-    <Compile Include="Entities\WebView.cs" />
-    <Compile Include="Entities\ParksListWagons.cs" />
-    <Compile Include="Entities\ParksWagons.cs" />
+    <Compile Include="Entities\Shared\WebAccess.cs" />
+    <Compile Include="Entities\Shared\WebView.cs" />
+    <Compile Include="Entities\MORS\ParksListWagons.cs" />
+    <Compile Include="Entities\MORS\ParksWagons.cs" />
     <Compile Include="Helper\ids_library.cs" />
+    <Compile Include="Entities\RWT\ArrivalCars.cs" />
+    <Compile Include="Entities\RWT\ArrivalSostav.cs" />
+    <Compile Include="Entities\Directory\Directory_Station.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
