--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestModule\Test_IDS.cs" />
     <Compile Include="TestModule\Test_Logs.cs" />
     <Compile Include="TestModule\Test_Metrans.cs" />
     <Compile Include="TestModule\Test_UZ.cs" />
@@ -89,6 +90,10 @@
     <ProjectReference Include="..\IDSLogs\IDSLogs.csproj">
       <Project>{910d6360-9e8c-4143-a4dd-84e778edb7a6}</Project>
       <Name>IDSLogs</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IDS\IDS.csproj">
+      <Project>{5929fe8f-0a9b-4eed-80e4-624705795d02}</Project>
+      <Name>IDS</Name>
     </ProjectReference>
     <ProjectReference Include="..\MT\MT.csproj">
       <Project>{165bfdab-435f-42eb-8b6c-120f910a62e8}</Project>
