fix bag create SMS error

--- a/MetransService/App.config
+++ b/MetransService/App.config
@@ -119,8 +119,12 @@
     <add key="WebApiMTUser" value="Arcelor1" />
     <add key="WebApiMTPSW" value="12345678-" />
     <add key="WebApiMTApi" value="/api/WagonsTracking" />
-    <add key="aspnet:RoslynCompilerLocation" value="roslyn" />    
-
+    <add key="aspnet:RoslynCompilerLocation" value="roslyn" />
+    <!--Подключение к Модулю согласования-->
+    <add key="SMS_HOST" value="10.21.2.139" />
+    <add key="SMS_PORT" value="8787" />
+    
+    
   </appSettings>
   <connectionStrings>
     <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
