--- a/Test/App.config
+++ b/Test/App.config
@@ -131,17 +131,17 @@
 
   </appSettings>
   <connectionStrings>
-    <!--<add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     
-    <add name="log" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="log" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="UZ" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="metrans" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="IDS" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="SMS" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SMS" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
 
   </connectionStrings>
   <entityFramework>
