--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -506,7 +506,18 @@
     <Content Include="Images\header.jpg" />
     <Content Include="Images\ids-op.jpg" />
     <Content Include="Images\ids-rwt.jpg" />
+    <Content Include="Images\idsrwt\add.png" />
+    <Content Include="Images\idsrwt\attach.png" />
+    <Content Include="Images\idsrwt\cancel.png" />
+    <Content Include="Images\idsrwt\close.png" />
+    <Content Include="Images\idsrwt\del.png" />
+    <Content Include="Images\idsrwt\delete.png" />
+    <Content Include="Images\idsrwt\edit.png" />
     <Content Include="Images\idsrwt\ok.png" />
+    <Content Include="Images\idsrwt\right.png" />
+    <Content Include="Images\idsrwt\setup.png" />
+    <Content Include="Images\idsrwt\stop.png" />
+    <Content Include="Images\idsrwt\user.png" />
     <Content Include="Images\idsrwt\warning.png" />
     <Content Include="Images\logo.png" />
     <Content Include="Images\portfolio\fullsize\1.jpg" />
