dev web input cars

--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -501,6 +501,7 @@
     <Content Include="Images\cd-icon-arrow.svg" />
     <Content Include="Images\cd-icon-check.svg" />
     <Content Include="Images\cd-icon-filter.svg" />
+    <Content Include="Images\cd\cd-close-dark.svg" />
     <Content Include="Images\error.jpg" />
     <Content Include="Images\Error404.png" />
     <Content Include="Images\header.jpg" />
