--- a/UZ_SMS/UZ_SMS.csproj
+++ b/UZ_SMS/UZ_SMS.csproj
@@ -49,8 +49,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TMSoft.Gohub.Client.Net">
-      <HintPath>C:\Program Files (x86)\KPD-UZ\Клієнт Модуля Узгодження\bin\TMSoft.Gohub.Client.Net.dll</HintPath>
+    <Reference Include="TMSoft.Gohub.Client.Net, Version=1.20.218.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\TMSoft\TMSoft.Gohub.Client.Net.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
