--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -138,7 +138,7 @@
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.7\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
     <Reference Include="TMSoft.Gohub.Client.Net">
-      <HintPath>..\packages\TMSoft\TMSoft.Gohub.Client.Net.dll</HintPath>
+      <HintPath>TMSoft\TMSoft.Gohub.Client.Net.dll</HintPath>
     </Reference>
     <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
       <HintPath>..\packages\WebActivatorEx.2.2.0\lib\net40\WebActivatorEx.dll</HintPath>
@@ -1055,6 +1055,7 @@
     <Folder Include="Areas\IDSMORS\Models\" />
     <Folder Include="Areas\IDSRWT\Models\" />
     <Folder Include="Models\" />
+    <Folder Include="TMSoft\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
