add reserv host mt

--- a/MetransService/App.config
+++ b/MetransService/App.config
@@ -82,7 +82,8 @@
     <add key="ActiveTransferFile" value="True" />
     <add key="IntervalTransferFile" value="300" />
     <!-- Подключение к SFTP Метранс -->
-    <add key="Host" value="159.224.194.27" />
+    <add key="Host_res" value="159.224.194.27" />
+    <add key="Host" value="85.198.128.130" />    
     <add key="Port" value="222" />
     <add key="User" value="arcelors" />
     <add key="PSW" value="$fh#ER2J63" />
