--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -63,7 +63,9 @@
     <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="Abstract\IWebView.cs" />
     <Compile Include="Abstract\IWebAccess.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_Shipper.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_Consignee.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_ExternalNetworkStation.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_Station.cs" />
     <Compile Include="Concrete\MORS\EFWagonsMotionSignals.cs" />
     <Compile Include="Concrete\MORS\EFParksListWagons.cs" />
@@ -116,6 +118,8 @@
     <Compile Include="Entities\RWT\UZ_DOC.cs" />
     <Compile Include="Entities\Directory\Directory_Consignee.cs" />
     <Compile Include="Entities\MORS\WagonsMotionSignals.cs" />
+    <Compile Include="Entities\Directory\Directory_ExternalNetworkStation.cs" />
+    <Compile Include="Entities\Directory\Directory_Shipper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
